[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ray_handler"
version = "0.0.0"
authors = [
  {name="Christian Moulsdale", email="spoopydale@gmail.com"},
]
description = "A package for distributed computation using ray"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ray[default] == 2.9.*",
    "numpy",
    "pandas",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/spoopydale/ray_handler"
Issues = "https://github.com/spoopydale/ray_handler/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = ["tests"]
